--- a/build.yaml
+++ b/build.yaml
@@ -6,14 +6,13 @@ targetAbi: "10.8.0.0"
 framework: "net6.0"
 overview: "Metadata and cover art integration for the One Pace project"
 description: >-
-  This integration is experimental because the One Pace project currently does not expose metadata in a stable manner,
-  so we have to rely on scraping data from the project website instead. Therefore, medatata retrieval might break
-  spontaneously if the website changes.
+  Please report a bugs at https://github.com/jwueller/jellyfin-plugin-onepace
 category: "Metadata"
 owner: "jwueller"
 artifacts:
 - "JWueller.Jellyfin.OnePace.dll"
 changelog: |-
+  1.1.0.0 - migrate to GraphQL data source
   1.0.2.0 - refine arc matching to include chapter ranges
   1.0.1.0 - more sophisticated URL detection
   1.0.0.0 - initial release
