--- a/JWueller.Jellyfin.OnePace/JWueller.Jellyfin.OnePace.csproj
+++ b/JWueller.Jellyfin.OnePace/JWueller.Jellyfin.OnePace.csproj
@@ -13,6 +13,9 @@
     <PackageReference Include="Jellyfin.Model" Version="10.8.0" />
   </ItemGroup>
   <ItemGroup>
+    <InternalsVisibleTo Include="$(AssemblyName).Tests" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="SerilogAnalyzer" Version="0.15.0" PrivateAssets="All" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.376" PrivateAssets="All" />
     <PackageReference Include="SmartAnalyzers.MultithreadingAnalyzer" Version="1.1.31" PrivateAssets="All" />
