--- a/build.yaml
+++ b/build.yaml
@@ -1,17 +1,18 @@
 ---
 name: "One Pace"
 guid: "1c0bf35e-3df4-47cc-8a4e-e3865de60d2f"
-version: "1.1.1.0"
+version: "1.2.0.0"
 targetAbi: "10.8.0.0"
 framework: "net6.0"
 overview: "Metadata and cover art integration for the One Pace project"
 description: >-
-  Please report a bugs at https://github.com/jwueller/jellyfin-plugin-onepace
+  Please report bugs at https://github.com/jwueller/jellyfin-plugin-onepace
 category: "Metadata"
 owner: "jwueller"
 artifacts:
 - "JWueller.Jellyfin.OnePace.dll"
 changelog: |-
+  1.2.0.0 - incorporate API changes
   1.1.1.0 - fix matching inefficiencies
   1.1.0.0 - migrate to GraphQL data source
   1.0.2.0 - refine arc matching to include chapter ranges
