--- a/build.yaml
+++ b/build.yaml
@@ -1,7 +1,7 @@
 ---
 name: "One Pace"
 guid: "1c0bf35e-3df4-47cc-8a4e-e3865de60d2f"
-version: "1.3.0.0"
+version: "1.3.1.0"
 targetAbi: "10.8.0.0"
 framework: "net6.0"
 overview: "Metadata and cover art integration for the One Pace project"
@@ -12,6 +12,7 @@ owner: "jwueller"
 artifacts:
 - "JWueller.Jellyfin.OnePace.dll"
 changelog: |-
+  1.3.1.0 - add more logging to identify issues more easily
   1.3.0.0 - upgrade to API 2.6.0
   1.2.1.0 - fix arc identification
   1.2.0.0 - incorporate API changes
