--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,7 +1,8 @@
 <Project>
-    <PropertyGroup>
-        <Version>1.3.1.0</Version>
-        <AssemblyVersion>1.3.1.0</AssemblyVersion>
-        <FileVersion>1.3.1.0</FileVersion>
-    </PropertyGroup>
+  <PropertyGroup>
+    <ProjectVersion>1.3.1.0</ProjectVersion>
+    <Version>$(ProjectVersion)</Version>
+    <AssemblyVersion>$(ProjectVersion)</AssemblyVersion>
+    <FileVersion>$(ProjectVersion)</FileVersion>
+  </PropertyGroup>
 </Project>
