Use existing action for installing yq
yq seems to be finnicky with its compatibility, but luckily someone else
has already done the work of getting the latest version and caching it.

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,11 +14,8 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
-    - name: Install yq
-      run: |
-        sudo add-apt-repository ppa:rmescandon/yq
-        sudo apt update
-        sudo apt install yq -y
+    - name: Setup yq
+      uses: vegardit/gha-setup-yq@v1
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
