--- a/JWueller.Jellyfin.OnePace.Tests/JWueller.Jellyfin.OnePace.Tests.csproj
+++ b/JWueller.Jellyfin.OnePace.Tests/JWueller.Jellyfin.OnePace.Tests.csproj
@@ -9,23 +9,23 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
-    <PackageReference Include="Moq" Version="4.20.70" />
-    <PackageReference Include="xunit" Version="2.8.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.8.1">
+    <PackageReference Include="Microsoft.NET.Test.Sdk"/>
+    <PackageReference Include="Moq"/>
+    <PackageReference Include="xunit"/>
+    <PackageReference Include="xunit.runner.visualstudio">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="coverlet.collector" Version="6.0.2">
+    <PackageReference Include="coverlet.collector">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Jellyfin.Controller" Version="10.9.6" />
-    <PackageReference Include="Jellyfin.Model" Version="10.9.6" />
+    <PackageReference Include="Jellyfin.Controller"/>
+    <PackageReference Include="Jellyfin.Model"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\JWueller.Jellyfin.OnePace\JWueller.Jellyfin.OnePace.csproj" />
+    <ProjectReference Include="..\JWueller.Jellyfin.OnePace\JWueller.Jellyfin.OnePace.csproj"/>
   </ItemGroup>
 </Project>
